...
              library: 'MaterialIcons',
              name: 'chevron-left',
              size: 20,
            },
          },
          {
            label: 'Próximo',
            enabled: !isCheckingName,
            icon: {
              library: 'MaterialIcons',
              name: 'chevron-right',
              size: 20,
            },
...
              name: 'chevron-left',
              size: 20,
            },
            onPress: () => previousStep(),
          },
          {
            label: 'Gerar',
            icon: {
              library: 'MaterialIcons',
              name: 'play-arrow',
              size: 16,
            },
            iconPosition: 'right',
...
      },
      {
        title: 'Pronto',
        content: <AssistenteResultadoStep />,
        actions: [
          {
            label: 'Ir ao início',
            type: 'outlined',
            icon: {
              library: 'MaterialCommunityIcons',
              name: 'home-outline',
              size: 16,
            },
            onPress: () => router.back(),
          },
          {
            label: 'Acompanhar',
            icon: {
              library: 'MaterialCommunityIcons',
              name: 'eye-outline',
              size: 16,
            },
            color: Pallete.secondary,
...
