...
              name='clock-fast'
              size={40}
              color={palette.secondary}
            />
          </View>
          <FancyText size='large' type='bold' color={palette.fonts.dark} style={styles.title}>
            Geração iniciada!
          </FancyText>
          <FancyText
            size='small'
            type='medium'
            color={palette.fonts.inactive}
            style={styles.subtitle}
...
