...
          <TutorialTarget
            id='escala-manual-criar'
            registerTarget={tour.registerTarget}
            unregisterTarget={tour.unregisterTarget}
          >
            <FancyButton
              label={!isCreatingManual ? 'Criar escala' : 'Criando...'}
              disabled={isCreatingManual || isCheckingName}
              icon={{ ...DefaultIconsNames.save, size: 14 }}
              onPress={handleCriar}
            />
          </TutorialTarget>
        </View>
...
